--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
+permissions:
+  contents: read
+  issues: write
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: VerbaNexAI
