--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
+
 title: blank # the website title (if blank, full name will be used instead)
-first_name: VerbaNexAI
-middle_name:
-last_name: Lab
+first_name: You
+middle_name: R.
+last_name: Name
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
