--- a/_config.yml
+++ b/_config.yml
@@ -153,6 +153,8 @@ collections:
     output: true
   projects:
     output: true
+  teaching:
+    output: true
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
